// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Property issues Section toString as field key does not have any side effects 1`] = `
Object {
  "elements": Array [
    Object {
      "key": "toString",
      "type": "field",
      "value": "ok",
    },
  ],
  "type": "document",
}
`;

exports[`Property issues Section toString as fieldset entry does not have any side effects 1`] = `
Object {
  "elements": Array [
    Object {
      "entries": Array [
        Object {
          "key": "toString",
          "type": "fieldsetEntry",
          "value": "ok",
        },
      ],
      "key": "check",
      "type": "fieldset",
    },
  ],
  "type": "document",
}
`;

exports[`Property issues Section toString as fieldset key does not have any side effects 1`] = `
Object {
  "elements": Array [
    Object {
      "entries": Array [
        Object {
          "key": "check",
          "type": "fieldsetEntry",
          "value": "ok",
        },
      ],
      "key": "toString",
      "type": "fieldset",
    },
  ],
  "type": "document",
}
`;
